--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,6 +76,7 @@ en:
   subscriptions:
     create:
       success: "Subscription successfully created."
+      errors: "There was a problem creating the subscription."
     update:
       success: "Subscription was successfully updated."
     destroy:
@@ -108,7 +109,7 @@ en:
       unconfirmed_success: "User was successfully updated. Email sent with confirmation instructions."
       errors: "There was a problem updating the user."
     destroy:
-      success: "User was successfully deleted."
+      success: "User was successfully deactivated."
     registration:
       title:
         edit: "Goalify: Edit Registration"
