Adding titles to password pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,10 @@ en:
     session:
       title:
         new: "Goalify: Sign In"
+    password:
+      title:
+        new: "Goalify: Reset Password"
+        edit: "Goalify: Edit Password"
     title:
       index: "Goalify: All Users"
       show: "Goalify: Showing User"
